services/tandoor-recipes/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tandoor-recipes
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector: {}
  template:
    spec:
      restartPolicy: Always
      containers:
      - name: recipes
        image: vabene1111/recipes
        imagePullPolicy: IfNotPresent
        startupProbe:
          httpGet:
            path: /
            port: http
          periodSeconds: 10
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /
            port: http
          periodSeconds: 10
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1
            memory: 256Mi
        volumeMounts:
          - mountPath: /opt/recipes/mediafiles
            name: media
            # mount as subPath due to lost+found on ext4 pvc
            subPath: files
          - mountPath: /opt/recipes/staticfiles
            name: static
            # mount as subPath due to lost+found on ext4 pvc
            subPath: files
        ports:
          - name: http
            containerPort: 80
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: tandoor-recipes-media
        - name: static
          persistentVolumeClaim:
            claimName: tandoor-recipes-static
