services/tandoor-recipes/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tandoor-recipes
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
