services/tandoor-recipes/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tandoor-recipes
spec:
  parentRefs:
    - name: traefik-intranet
      namespace: traefik
  hostnames:
    - tandoor.int.fivebytestudios.com
  rules:
    - backendRefs:
        - name: tandoor-recipes
          port: 80
